--- a/maptest.html
+++ b/maptest.html
@@ -31,8 +31,8 @@
         JSlat = {{LATpy}};
         JSlong = {{LONGpy}};
         
-        Start_Lat = 53.475577;
-        Start_Long = -2.235348;
+        Start_Lat = 53.47541458927207;
+        Start_Long = -2.2344839572906494;
         
         var sackville = { lat: Start_Lat, lng: Start_Long };             //This could be current GPS co ordinate of tank8. A dynamic value from the server backend would update tis value with tank co-ordinate
         var Destination = { lat: JSlat, lng: JSlong };
